# OpenGL

./: CMakeLists.txt  main.cpp
src/: glad.c
